Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-85965

Batch rendering order may go wrong if batch's first node gets invisible

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.15.1
    • 5.12.3, 5.12.9, 5.14.2, 5.15.0
    • Quick: SceneGraph
    • None
    • Linux/X11, QNX, Windows
    • a4fb90f2239de76751922b3c54893a0207b59092 (qt/qtdeclarative/dev) fed6a01e61e460e14f17b79fff9bf27fbb33dd48 (qt/qtdeclarative/5.15)

      See the attached code and QSG_RENDERER_DEBUG=build log.

      The visibility of "HigherText" is unchanged, but it blinks along with the wide "@" icon (order: 2).
      That's probably because the "Batch 0" (order: 5) overwrites the "Batch 1" (order: 3, 4, 7).

      This is the batches when the wide "@" is visible:

      {{Alpha Batches:

      • Batch 0 0x7f31b4055eb0 upload root: 0x0
      • element: 0x7f31b400a6c0 Rect( 254 280 402 428 ) node: GeometryNode( 0x7f31b400ca40 strip #V: 4 #I: 0 x1= 0 y1= 8 x2= 148 y2= 156 materialtype= 0x7f31d77bea62 ) order: 1
      • Batch 1 0x7f31b4057610 upload root: 0x0
      • element: 0x7f31b400a848 Rect( 70 310 570 384 ) node: GeometryNode( 0x7f31b400cf90 strip #V: 4 #I: 0 x1= 0 y1= 0 x2= 500 y2= 74 materialtype= 0x7f31d77bea62 ) order: 2
      • element: 0x7f31b400a7a0 Rect( 253 84 388 219 ) node: GeometryNode( 0x7f31b402a6c0 strip #V: 4 #I: 0 x1= 0 y1= 0 x2= 135 y2= 135 materialtype= 0x7f31d77bea62 ) order: 5
      • Batch 2 0x7f31b4057490 upload root: 0x0
      • element: 0x7f31b400a730 Rect( 455.471 248.722 585.567 272.27 ) node: GeometryNode( 0x7f31b4010dd0 triangles #V: 36 #I: 54 x1= 0.619141 y1= 7.72217 x2= 130.715 y2= 31.27 materialtype= 0x7f31d77becf9 ) order: 3
      • element: 0x7f31b400a768 Rect( 455.471 188.722 585.567 212.27 ) node: GeometryNode( 0x7f31b4011720 triangles #V: 36 #I: 54 x1= 0.619141 y1= 7.72217 x2= 130.715 y2= 31.27 materialtype= 0x7f31d77becf9 ) order: 4
      • element: 0x7f31b400a810 Rect( 251.432 139.48 390.606 170.48 ) node: GeometryNode( 0x7f31b402b050 triangles #V: 40 #I: 60 x1= 0.619141 y1= 6.47998 x2= 139.793 y2= 37.48 materialtype= 0x7f31d77becf9 ) order: 7
      • Batch 3 0x7f31b408dd30 upload root: 0x0
      • element: 0x7f31b400a7d8 Rect( 348 229 419 300 ) node: GeometryNode( 0x7f31b402ab00 strip #V: 4 #I: 0 x1= 0 y1= 0 x2= 71 y2= 71 materialtype= 0x7f31d77bea62 ) order: 6
        }}

      And this is the batches when the wide "@" got invisible:

      {{Alpha Batches:

      • Batch 0 0x7f31b4057610 upload root: 0x0
      • element: 0x7f31b400a7a0 Rect( 253 84 388 219 ) node: GeometryNode( 0x7f31b402a6c0 strip #V: 4 #I: 0 x1= 0 y1= 0 x2= 135 y2= 135 materialtype= 0x7f31d77bea62 ) order: 5
      • Batch 1 0x7f31b4057490 root: 0x0
      • element: 0x7f31b400a730 Rect( 455.471 248.722 585.567 272.27 ) node: GeometryNode( 0x7f31b4010dd0 triangles #V: 36 #I: 54 x1= 0.619141 y1= 7.72217 x2= 130.715 y2= 31.27 materialtype= 0x7f31d77becf9 ) order: 3
      • element: 0x7f31b400a768 Rect( 455.471 188.722 585.567 212.27 ) node: GeometryNode( 0x7f31b4011720 triangles #V: 36 #I: 54 x1= 0.619141 y1= 7.72217 x2= 130.715 y2= 31.27 materialtype= 0x7f31d77becf9 ) order: 4
      • element: 0x7f31b400a810 Rect( 251.432 139.48 390.606 170.48 ) node: GeometryNode( 0x7f31b402b050 triangles #V: 40 #I: 60 x1= 0.619141 y1= 6.47998 x2= 139.793 y2= 37.48 materialtype= 0x7f31d77becf9 ) order: 7
      • Batch 2 0x7f31b408dd30 root: 0x0
      • element: 0x7f31b400a7d8 Rect( 348 229 419 300 ) node: GeometryNode( 0x7f31b402ab00 strip #V: 4 #I: 0 x1= 0 y1= 0 x2= 71 y2= 71 materialtype= 0x7f31d77bea62 ) order: 6
      • Batch 3 0x7f31b4055eb0 upload root: 0x0
      • element: 0x7f31b400a6c0 Rect( 254 280 402 428 ) node: GeometryNode( 0x7f31b400ca40 strip #V: 4 #I: 0 x1= 0 y1= 8 x2= 148 y2= 156 materialtype= 0x7f31d77bea62 ) order: 1
        }}

        1. SceneGraphBlinking.zip
          63 kB
        2. batch.log
          16 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            janichol Andy Nichols
            jirauser52013 user-c858f (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes