Force Batch Rebuild if SubtreeBlocked includes an opacity change

Fixes: QTBUG-85965
Pick-to: 5.15
Change-Id: I2f5aba7fbde7ad2149d408d29db9219f33f13ca8
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>